[Fix] firefox scrollbars were causing panels to shift.

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -22,6 +22,7 @@ html, body {
     border-width: 1px;
     bottom: 0px;
     left: -1px;
+    overflow: hidden;
     position: absolute;
     right: -1px;
     top: 0px;
@@ -33,11 +34,15 @@ html, body {
     width: 100%;
 }
 
+/* TODO BRN: In order to support firefox scroll bars. The inner body must be 20 px larger than the wrapper and the wrapper
+ must have hidden scrolling. This way the panel is still scrollable but it hides the scroll bar. */
+
 .application-body {
     bottom: 0px;
     left: 0px;
     margin-top: 60px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     position: absolute;
     right: 0px;
     top: 0px;
@@ -80,6 +85,7 @@ html, body {
     box-shadow: 2px 2px 10px #888888;
     left: 0px;
     margin: 2px;
+    overflow: hidden;
     position: absolute;
     right: 0px;
     top: 0px;
@@ -118,9 +124,9 @@ html, body {
 
 .panel-header-title {
     left: 0px;
-    padding: 0px;
     margin-left: 10px;
     margin-right: 35px;
+    padding: 0px;
     position: absolute;
     right: 0px;
 }
@@ -132,14 +138,14 @@ html, body {
 }
 
 .panel-body {
-    overflow: scroll;
-    width: 100%;
-    position: absolute;
-    top: 0px;
     bottom: 0px;
     left: 0px;
-    right: 0px;
     margin-top: 35px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: absolute;
+    right: 0px;
+    top: 0px;
 }
 
 .panel-body-no-header {
@@ -824,5 +830,15 @@ html, body {
     }
     .offset1 {
         margin-left: 62px;
+    }
+}
+
+
+@-moz-document url-prefix() {
+    .application-body {
+        right: -20px;
+    }
+    .panel-body {
+        right: -20px;
     }
 }
